--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
             <option value="Центральный военный округ">Центральный военный округ</option>
             <option value="Южный военный округ">Южный военный округ</option>
         </select>
-            <button id='total-selection'>
-Умікни все!
-        </button>
             <button id='svitcher'> ierarchy</button>
+            <button id='total-selection'>Умікни все!</button>
         </div>
-
 
 
 
@@ -98,17 +95,15 @@
                             //console.log(photo[i].length)
                             try { // для кожного елементу із списку класів додаємо властивість, якщо елемента немає в списку - пропускаємо
                                 photo[i].onmouseover = function() {
-                                    description = document.getElementById("box3")
-
-                                    while (description.firstChild) {
-                                        description.removeChild(description.firstChild);
-                                    }
-
-
-
-                                    //console.log(description)
-                                    //console.log(this.classList[0])
                                     try {
+                                        description = document.getElementById("box3")
+
+                                        while (description.firstChild) {
+                                            description.removeChild(description.firstChild);
+                                        }
+                                        //console.log(description)
+                                        //console.log(this.classList[0])
+
                                         f = this.classList[0]
                                             //console.log(f)
                                         var filtered_unit = data.filter(function(d) {
@@ -126,14 +121,16 @@
                                             "<b>Військова частина</b> " + filtered_unit[0].mil_part
 
 
-                                    } catch {}
-                                    //console.log(text)
 
-                                    var child = document.createElement('div');
-                                    child.innerHTML = text
-                                    child.classList.add("total-description")
-                                        //console.log(child)
-                                    description.appendChild(child);
+                                        //console.log(text)
+
+                                        var child = document.createElement('div');
+                                        child.innerHTML = text
+                                        child.classList.add("total-description")
+                                            //console.log(child)
+                                        description.appendChild(child);
+                                    } catch {}
+
                                     elements = document.getElementsByClassName(d.unit)
                                         //console.log(elements)
                                         //texts = elements.selectAll('text')
@@ -209,11 +206,13 @@
                                     }
                                 };
                                 photo[i].onmouseleave = function() {
-                                    description = document.getElementById("box3")
+                                    try {
+                                        description = document.getElementById("box3")
 
-                                    while (description.firstChild) {
-                                        description.removeChild(description.firstChild);
-                                    }
+                                        while (description.firstChild) {
+                                            description.removeChild(description.firstChild);
+                                        }
+                                    } catch {}
                                     elements = document.getElementsByClassName(d.unit)
                                         //console.log(elements)
                                     for (var i = 0; i < elements.length; i++) {
@@ -316,7 +315,7 @@
                 butswitcher.onclick = function() {
                     if (flag == "list") {
                         console.log(butswitcher)
-                        butswitcher.innerHTML = 'ierarchy'
+                        butswitcher.innerHTML = 'list'
                         flag = "ierarchy"
 
                         main_div = document.getElementById("main_div")
@@ -327,14 +326,15 @@
                         var ierarchy = document.createElement('div');
                         ierarchy.classList.add("ierarchy")
                         ierarchy.setAttribute('id', 'ierarchy')
-                        ierarchy.setAttribute('height', '100%')
+                            //ierarchy.setAttribute('height', '99vh')
                             //child.id.add("cbox2")
                         main_div.appendChild(ierarchy);
-
+                        totalSelectionBut = document.getElementById("total-selection")
+                        totalSelectionBut.remove()
 
                         ierarchyPainter()
                     } else {
-                        butswitcher.innerHTML = 'list'
+                        butswitcher.innerHTML = 'ierarchy'
                         flag = "list"
 
                         main_div = document.getElementById("main_div")
@@ -378,6 +378,14 @@
                         box3.setAttribute('id', 'box3')
                         stickybox.appendChild(box3);
 
+                        var buttonsBlock = document.getElementById("selectors")
+                        var totalSelectionBut = document.createElement('button');
+                        totalSelectionBut.setAttribute('id', 'total-selection')
+                        totalSelectionBut.innerHTML = 'Умікни усе!'
+                            //totalSelectionBut.setAttribute('height', '10px')
+                        buttonsBlock.appendChild(totalSelectionBut);
+
+                        selectTotal()
                         listPainter()
                         mapPainter()
                     }
