--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     } catch {}
 
                                     elements = document.getElementsByClassName(d.unit)
-                                    console.log(elements)
+                                        //console.log(elements)
                                         //texts = elements.selectAll('text')
                                         //console.log(texts)
 
