--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         <div class='usual_text_block'></div>
         <div id='selectors'>
             <select id="district_selector">
-            <option value="Западный военный округ">Западный военный округ</option>
+            <option value="Західний військовий округ">Західний військовий округ</option>
             <option value="Північний флот">Північний флот</option>
             <option value="Східний військовий округ">Східний військовий округ</option>
-            <option value="Центральный военный округ">Центральный военный округ</option>
-            <option value="Южный военный округ">Южный военный округ</option>
+            <option value="Центральний військовий округ">Центральний військовий округ</option>
+            <option value="Південний військовий округ">Південний військовий округ</option>
         </select>
-            <button id='total-selection'>Умікни все!</button>
         </div>
 
 
@@ -56,23 +55,21 @@
         </script>
         <script>
             function options() {
-
+                // Підсвічуємо точки, лінії та текст підрозділів, які беруть участь у повномасштабному вторгенні
                 criminals = document.getElementsByClassName("Yes")
                     //console.log(criminals)
 
                 for (var i = 0; i < criminals.length; i++) {
                     if (criminals[i].localName == 'circle') {
-                        //console.log(criminals[i].localName)
-                        //console.log(criminals[i])
-                        //console.log("criminals: " + i)
-                        criminals[i].style.color = 'red';
-                        criminals[i].style.stroke = 'red';
-                    } else if (criminals[i].localName == 'li') {
-                        //criminals[i].style.color = 'red';
-                        criminals[i].style.color = "red";
-                    } else {
-                        //console.log('not_circle')
-                    }
+                        criminals[i].style.fill = 'red';
+                        criminals[i].style.opacity = 0.5;
+                        //} else if (criminals[i].localName == 'li') {
+                        //    criminals[i].style.color = "red";
+                    } else if (criminals[i].localName == 'path') {
+                        criminals[i].style.stroke = "red";
+                    } else if (criminals[i].localName == 'text') {
+                        criminals[i].style.opacity = 1;
+                    } else {}
 
                 }
 
@@ -96,7 +93,6 @@
                                 photo[i].onmouseover = function() {
                                     try {
                                         description = document.getElementById("box3")
-
                                         while (description.firstChild) {
                                             description.removeChild(description.firstChild);
                                         }
@@ -126,53 +122,33 @@
                                         var child = document.createElement('div');
                                         child.innerHTML = text
                                         child.classList.add("total-description")
-                                            //console.log(child)
                                         description.appendChild(child);
                                     } catch {}
 
                                     elements = document.getElementsByClassName(d.unit)
-                                        //console.log(elements)
-                                        //texts = elements.selectAll('text')
-                                        //console.log(texts)
-
+                                        // параметри для всіх елементів, на які наводиться мишка
                                     for (var i = 0; i < elements.length; i++) {
-                                        //console.log(elements[i])
                                         if (elements[i].localName == 'circle') {
-                                            //console.log("circle")
-                                            //elements[i].style.color = 'green';
-                                            //elements[i].style.stroke = 'red';
                                             elements[i].style.r = "10"
                                         } else if (elements[i].localName == 'text') {
-                                            //console.log("text")
-                                            elements[i].style.color = 'red';
-                                            elements[i].style.stroke = 'red'
                                             elements[i].style.font = "14px proxima-medium";
                                         } else if (elements[i].localName == 'li') {
-                                            //console.log(elements[i])
                                             elements[i].style.font = "18px proxima-medium";
 
                                         } else if (elements[i].localName == 'path') { // Лінії на карті приховані, і підсвічуються лише при наведенні
-                                            //console.log(elements[i].classList)
-                                            //console.log(elements[i].classList.contains('link'))
                                             if (elements[i].classList.contains('link')) {
                                                 // для ліній на ієрархії
-                                                console.log("path")
-                                                elements[i].style.strokewidth = "10px";
-                                                elements[i].style.stroke = 'red';
+                                                elements[i].style.strokewidth = "20px";
                                             } else {
                                                 // для ліній на карті
                                                 elements[i].style.strokewidth = "5px";
-                                                elements[i].style.stroke = 'red';
                                                 elements[i].style.opacity = "1";
                                             }
                                         } else {}
                                         //підсвічуємо назв населених пунктів та точки в Україні
-                                        //console.log(elements[i])
                                         try {
                                             var myClass = this.classList;
-                                            //console.log(myClass[0]);
                                             text_label = document.getElementsByClassName(myClass[0] + " text-explainer")
-                                                //console.log(text_label[0])
                                             text_label[0].style.opacity = "1";
                                         } catch {}
                                         try {
@@ -187,27 +163,19 @@
                                     }
                                 };
                                 photo[i].onmouseleave = function() {
-                                    try {
+                                    // прибрав автоматичне видалення обраних точок
+                                    /*try {
                                         description = document.getElementById("box3")
 
                                         while (description.firstChild) {
                                             description.removeChild(description.firstChild);
                                         }
-                                    } catch {}
+                                    } catch {} */
                                     elements = document.getElementsByClassName(d.unit)
-                                        //console.log(elements)
                                     for (var i = 0; i < elements.length; i++) {
-                                        //console.log(elements[i])
                                         if (elements[i].localName == 'circle') {
-                                            //console.log("circle")
-                                            //elements[i].style.stroke = 'black';
                                             elements[i].style.r = "3"
-                                                //elements[i].style.stroke = "None"
-                                                //elements[i].style.color = 'black';
                                         } else if (elements[i].localName == 'text') {
-                                            //console.log("text")
-                                            elements[i].style.color = 'black';
-                                            elements[i].style.stroke = "None"
                                             elements[i].style.font = "10px proxima-medium";
                                         } else if (elements[i].localName == 'li') {
                                             //console.log(elements[i])
@@ -215,13 +183,8 @@
                                         } else if (elements[i].localName == 'path') {
                                             if (elements[i].classList.contains('link')) {
                                                 // для ліній на ієрархії
-                                                elements[i].style.strokewidth = "1px";
-                                                elements[i].style.stroke = 'black';
                                             } else {
                                                 // для ліній на карті 
-                                                //console.log("path")
-                                                elements[i].style.strokewidth = "1px";
-                                                elements[i].style.stroke = 'black';
                                                 elements[i].style.opacity = "0";
                                             }
                                         } else {}
@@ -229,10 +192,7 @@
                                         // прибираємо підсвітку назв населених пунктів та точки в Україні
                                         try {
                                             var myClass = this.classList;
-                                            //console.log(myClass[0]);
-                                            //text_label = map_svg.selectAll(myClass[0] + " text_explainer")
                                             text_label = document.getElementsByClassName(myClass[0] + " text-explainer")
-                                                //console.log(text_label[0])
                                             text_label[0].style.opacity = "0"
                                         } catch {}
 
@@ -257,44 +217,6 @@
         </script>>
         <script>
             options()
-        </script>
-        <script>
-            function selectTotal() {
-                show = false
-                    //console.log("start show " + show)
-                butTotal = document.getElementById("total-selection")
-                    //console.log(butTotal)
-                butTotal.onclick = function() {
-                    //console.log("start show " + show)
-                    if (show === false) {
-                        criminals = document.getElementsByClassName("Yes")
-                            //console.log(criminals)
-                        for (var i = 0; i < criminals.length; i++) {
-                            if (criminals[i].localName == 'path') {
-                                criminals[i].style.stroke = 'red'
-                                criminals[i].style.opacity = '1'
-                            } else {}
-                        }
-                        show = true
-                        butTotal
-                        //console.log("show path")
-                    } else {
-                        criminals = document.getElementsByClassName("Yes")
-                            //console.log(criminals)
-                        for (var i = 0; i < criminals.length; i++) {
-                            if (criminals[i].localName == 'path') {
-                                criminals[i].style.stroke = 'red'
-                                criminals[i].style.opacity = '0'
-                            } else {}
-                        }
-                        show = false
-                            //console.log("hide path")
-                    }
-                    //console.log("end show " + show)
-                    return show
-                }
-            }
-            selectTotal()
         </script>
     </body>
 
