--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div id='lead'></div>
         <p>Скільки бойових підрозділів Російська Федерація вже задіяла у війні з Україною? Чи є десь у "степах забайкалля" ще одна російська армія із потужною технікою, яку показують на парадах до "Дна перемоги"?</p>
         <!--Путін Хуйло-->
-        <div class='usual_text_block'></div>
+        <div class='usual_text_block'>
+        </div>
         <div id='selectors'>
             <select id="district_selector">
             <option value="Західний військовий округ">Західний військовий округ</option>
