--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 </div>
                 <div class="box2" id="box2">
                     <div uk-sticky="map_sticky" id="sticky">
+                        <div>
+                            <p id='map-explainer'>
+                                Оберіть військовий округ із списку та наведіть назву на підрозділ щоб отримати додаткову інформацію
+                            </p>
+                        </div>
                         <div id='map'></div>
                         <div id="box3"> Наведіть на точку на карті для отримання детальної інформації</div>
                     </div>
