--- a/index.html
+++ b/index.html
@@ -17,43 +17,140 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.3/dist/js/uikit-icons.min.js"></script>
 
     <body>
-        <div id='main-header'>Наскільки велика російська армія?</div>
-        <div id='lead'></div>
-        <p>Скільки бойових підрозділів Російська Федерація вже задіяла у війні з Україною? Чи є десь у "степах забайкалля" ще одна російська армія із потужною технікою, яку показують на парадах до "Дна перемоги"?</p>
-        <!--Путін Хуйло-->
-        <div class='usual_text_block'>
-        </div>
-        <div id='selectors'>
-            <select id="district_selector">
+        <article>
+            <div id='main-header'>Наскільки велика російська армія?</div>
+            <div id='lead'></div>
+            <p>Скільки бойових підрозділів Російська Федерація вже задіяла у війні з Україною? Чи є десь у "степах забайкалля" ще одна російська армія із потужною технікою, яку показують на парадах до "Дна перемоги"?</p>
+            <!--Путін Хуйло-->
+            <div class='usual_text_block'>
+                <p>На початку квітня ми разом із військовими поїхали в Бородянку, для того щоб на власні очі побачити жахіття, які по собі залишили росіяни. І на питання шведського журналіста один із військових відповів, що російська армія, не така потужна
+                    наскільки велика і її перемелювання займає багато часу.</p>
+
+                <p>З тих пір вже пройшли місяці змінилась наша тактика, змінилась тактика росіян із “зайті і углубіть” до широкомасштабних польових зіткнень у стилі Другої світової війни.</p>
+
+                <p>Але російська армія дійсно велика. За їх законодавством вона має нараховувати більше 900 тисяч військовослужбовців та ще 200 тисяч цивільних службовців у “мирний час”, а мобілізаційний резерв у воєнний стан становить понад 17 мільйонів.</p>
+
+                <p>Лише на базах зберігання військової техніки знаходиться більше 10 тисяч танків, від Т64, які зараз почали активно розконсервовувати до Т34. Мільйони одиниць зброї включаючи “трьохлінійки”, ППШ та кулемети Максима та мільярди патронів і
+                    сотні тисяч артилерійських снарядів.</p>
+
+                <p>Російська армія можливо недолуга, проскнута корупцією, шабкозакидством та має небагато новітнього озброєння та навчених мотивованих бійців, але її розміри не варто не дооцінювати, також не варто недооцінювати її потужність та можливість
+                    наробити ще багато горя Українцям.</p>
+
+                <p>ТЕКСТи вирішили дослідити, наскільки велика російська армія, з чого вона складається, скільки підрозділів вже було задіяно в Україні.</p>
+
+                <p>У 2008 році в росії почалась реформа армії направлена на її оптимізацію та підготовку до ведення війн нового покоління. За основу, звичайно були взяті стандарти НАТО. Структура: “військовий округ - армія - дивізія - полк” реформувалась
+                    у “військовий округ - армія - бригада”. Така структура, зокрема і в Українській армії.</p>
+
+                <p>Реформа не була завершена і лишилась змішаною - десь є дивізії і полки, а десь бригади також є і армії і армійські корпуси.</p>
+
+                <p>Бригадна структура більше відповідаю веденню новітніх війн, військові експерти називають їх війнами 4 покоління - високоінтенсивні, із великими марш кидками, використанням сучасної техніки, озброєння, новітніх технологій, а головне - вузько
+                    направлених спеціалістів та взаємодії різних родів військ.</p>
+
+                <p>Окремі елементи структури.</p>
+
+                <p>Військовий округ - стратегічне командування військ, які знаходяться на певній території. В росії чотири військові округи: Західний, Центральний, Південний, Східний, замість північного спеціальне угрупування - Північний флот.</p>
+
+                <p>Також в межах військових округів є окремі флоти: Чорноморський, Каспійський, Балтійський та Тихоокеанський - вони підпорядковуються коружному командуванню.</p>
+
+                <p>Армія - стратегічне об’єднання військ в межах певного Воєнного округу. Армія може складатися із дивізій і полків, або напряму бригад. Також армія може включати окремі полки та роти та навіть батальйони. Армія зазвичай складається із кількох
+                    бригад - танкових або мотострілецьких, які є її основною силою, також до цього додаються артилерійські бригади, зенітно- ракетні бригади - ПВО, бригади радіохімічного захисту все залежить від конкретної армії, Меншими підрозділами
+                    в армії можуть бути інженерні та саперні полки, роти снайперів в такому випадку до їх назви додається “окремий”.</p>
+
+                <p>Дивізія - зазвичай складається із кількох “ударних” полків - мотострілецьких або танкових до цього додається артилерійський, саперний, інженерний полки та також менші підрозділи.</p>
+
+                <p>Бригада - складається із лінійних та окремих батальйонів. Лінійних батальйонів зазвичай 3 це мотострілецькі і танкові. Якщо Мотострілецьких 2 - бригада вважається мотопіхотною, якщо 2 танкових - то танковою бригадою. Лінійні батальйони
+                    носять номери починаючи від “Першого” у кожній бригаді. Також у бригаді є артилерійський дивізіон, рота снайперів тощо. Та окремі батальйони - знову ж саперний, інженерний, зв’язку, можуть бути і окремі роти або взводи. Окремі підрозділи
+                    мають номери наскрізні для всіх військових сил.</p>
+
+                <p>Полк - має схожу із бригадою структуру, але менший по кількості. Так, якщо у бригаді близько 4 - 5 тисяч чоловік, то у полку 1 - 2 тисячі.</p>
+
+                <p>Бригада та полк є окремими тактичними одиницями і мають свої окремі військові частини, тож можна точно встановити місце їх постійної дислокації.</p>
+
+                <p>Росія в Україні воює у складі батальйонно - тактичних груп - БТгр які формуються на основі батальйонів із доданими підрозділами, зазвичай артилерійськими чи танковими.</p>
+
+                <p>Такі групи формуються на основі першого або першого та другого батальйонів бригад чи полків. Оскільки саме ці підрозділи є найбільш укомплектованими. Наприклад: У бригаді із 3х основний батальйонів на 100% людьми та технікою укомплектований
+                    перший, другий на 50%, а третій - кадрований тобто має лише невеличкий “штаб” із кількох офіцерів.</p>
+
+                <p>Кадрові підрозділи потенційно можуть бути “швидко” розгорнуті, оскільки мають структуру і потребують виключно особового складу та техніки.</p>
+
+                <p>Не всі солдати в армії воюють.</p>
+
+                <p>Не всі підрозділи в складі бригад та полків беруть участь у бойових діях. За стандартами НАТО, до прикладу на кожного солдата із гвинтівкою в руках припадає майже 10 із каструлями, папірцями, клавіатурами та ящиками. Є підрозділи ППО,
+                    які не часто знаходяться на нулі, є зв’язківці, інженери, інструктори, підрозділи матеріально - технічного забезпечення тощо. Із бригади у зіткненні на “нулі” беруть участь лише кілька лінійних батальйонів та окремі роти, наприклад
+                    снайперів чи саперів.</p>
+
+                <p>Російська армія також має цілі бригади, полки та навіть дивізі підтримки.</p>
+
+                <p>У 1960х роках навколо Москви почала розбудовуватися система протиповітряної оборони - в межах Московського військового округу, зараз ці підрозділи включені до складу Західного військового округу. Навколо москви було створено 1-шу армію
+                    протиповітряної оборони у складі 3 дивізій, яка зокрема мала захищати Москву від “потенційного” ядерного удару зі сторони США та Європи.</p>
+
+                <p>Фактично це армія оборони, її підрозділи могли б задіюватись у війні проти України, але лише у якості ППО.</p>
+
+                <p>Також ударними не можуть бути зв’язківці, які мають лише легке озброєння та переважно техніку для зв’язку та радіолокаційної боротьби, у інженерних та залізничних підрозділів також відсутнє важке озброєння - вони є підрозділами підтримки.</p>
+
+                <p>І російська армія має чимало таких підрозділів.</p>
+
+                <p>А Каспійська флотилія взагалі не може становити суттєвої загрози для України, оскільки є абсолютно ізольовано (але не виключено потенційних ракетних ударів). До того ж Чорне море вважається безядерною зоною, тому перебування тут кораблів
+                    чи підводних човнів із ядерними двигунами - заборонено.</p>
+
+                <p>Які сили росія задіяла в Україні?</p>
+
+                <p>В Україні росія задіяла підрозділи із усіх своїх військових округів.</p>
+
+                <p>Ударну силу війська складають моторизовані, танкові та артилерійські бригади та полки, або цілі дивізії чи армії.</p>
+
+                <p>На візуалізації ми відмітили ті підрозділи, щодо яких є точні згадки у ЗМІ, військових експертів або зведеннях Генерального штабу України, але це можуть бути не всі.</p>
+
+                <p>Із складу східного військового округу росія задіяла в україні повністю або частково: 5, 29, 35, 36 армії та підрозділи морської піхоти тихоокеанського флоту.</p>
+
+                <p>Також у складі Східного військового округу знаходиться 11 баз зберігання із яких скоріше всього знімається техніка і відправляється в Україну, зокрема танки Т64 та Т62.</p>
+
+                <p>Із Південного військового округу було залучено більшість підрозділів (армійського та дивізійного рівня), частково крім тих, які знаходяться в Кубанському краї та в Криму.</p>
+
+                <p>Із західного військового округу були залучені підрозділи 1-ї танкової армії, 76 та 98 повітряно - десантної дивізії, 20 армії, 144 та 3 мотострілецьких дивізій.</p>
+
+                <p>Центральний округ - 41 армія, 41 дивізія ППО та 90 танкова дивізії.</p>
+
+                <p>Це не виключний перелік підрозділів, і не весь склад цих армій та дивізій зараз воює в Україні, але це говорить про те, що росія дійсно задіяла більшість своїх “бойових” частин, і додаткової “готової та спорядженої” армії в степах Забайкалля,
+                    Уральських чи Алтайських горах скоріше за все немає. Так є окремі і бойові підрозділи і підрозділи підтримки, але сформованих організованих частин - на щастя ні.</p>
+
+                <p>Росія у своїй Європейській частині спромоглася сконцентрувати майже всі свої військові сили і поповнення підрозділів проходять за допомогою доукомплектування, а не створення чи введення в бій нових. Такі підрозділи вводять “з коліс” мають
+                    низьку мотивацію, відсутній бойовий досвід та почасти застарілу техніку.</p>
+
+                <p>Не варто недооцінювати здатність росії впроваджувати тактику випаленої землі. Також росія навіть у загальновійськових боях задіює підрозділи росгвардії - легкоозброєні внутрішні війська та так звану “народну міліцію Л\ДНР” - ці підрозділи
+                    не увійшли до нашої графіки. </p>
+            </div>
+            <div id='selectors'>
+                <select id="district_selector">
             <option value="Західний військовий округ">Західний військовий округ</option>
             <option value="Північний флот">Північний флот</option>
             <option value="Східний військовий округ">Східний військовий округ</option>
             <option value="Центральний військовий округ">Центральний військовий округ</option>
             <option value="Південний військовий округ">Південний військовий округ</option>
         </select>
-        </div>
+            </div>
 
 
 
-        <div id='main_div'>
-            <div class="main_grid" id="main_grid">
-                <div class="box1" id="box1">
-                    <div id="ierarchy"></div>
-                </div>
-                <div class="box2" id="box2">
-                    <div uk-sticky="map_sticky" id="sticky">
-                        <div>
-                            <p id='map-explainer'>
-                                Оберіть військовий округ із списку та наведіть назву на підрозділ щоб отримати додаткову інформацію
-                            </p>
+            <div id='main_div'>
+                <div class="main_grid" id="main_grid">
+                    <div class="box1" id="box1">
+                        <div id="ierarchy"></div>
+                    </div>
+                    <div class="box2" id="box2">
+                        <div uk-sticky="map_sticky" id="sticky">
+                            <div>
+                                <p id='map-explainer'>
+                                    Оберіть військовий округ із списку та наведіть назву на підрозділ щоб отримати додаткову інформацію
+                                </p>
+                            </div>
+                            <div id='map'></div>
+                            <div id="box3"> Наведіть на точку на карті для отримання детальної інформації</div>
                         </div>
-                        <div id='map'></div>
-                        <div id="box3"> Наведіть на точку на карті для отримання детальної інформації</div>
                     </div>
                 </div>
             </div>
-        </div>
-
+        </article>
         <script src="js/ierarchy.js"></script>
         <!-- <script src="js/list.js"></script> -->
         <script src="js/map.js"></script>
@@ -62,22 +159,7 @@
             function options() {
                 console.log('options')
                     // Підсвічуємо точки, лінії та текст підрозділів, які беруть участь у повномасштабному вторгенні
-                criminals = document.getElementsByClassName("Yes")
-                    //console.log(criminals)
 
-                for (var i = 0; i < criminals.length; i++) {
-                    if (criminals[i].localName == 'circle') {
-                        criminals[i].style.fill = 'red';
-                        criminals[i].style.opacity = 0.5;
-                        //} else if (criminals[i].localName == 'li') {
-                        //    criminals[i].style.color = "red";
-                    } else if (criminals[i].localName == 'path') {
-                        criminals[i].style.stroke = "red";
-                    } else if (criminals[i].localName == 'text') {
-                        criminals[i].style.opacity = 1;
-                    } else {}
-
-                }
 
                 d3.csv("/data/map.csv", function(data) {
                     //console.log(data)
@@ -279,6 +361,23 @@
                         };
                     })
                 })
+
+                criminals = document.getElementsByClassName("Yes")
+                    //console.log(criminals)
+
+                for (var i = 0; i < criminals.length; i++) {
+                    if (criminals[i].localName == 'circle') {
+                        criminals[i].style.fill = 'red';
+                        criminals[i].style.opacity = 0.5;
+                        //} else if (criminals[i].localName == 'li') {
+                        //    criminals[i].style.color = "red";
+                    } else if (criminals[i].localName == 'path') {
+                        criminals[i].style.stroke = "red";
+                    } else if (criminals[i].localName == 'text') {
+                        criminals[i].style.opacity = 1;
+                    } else {}
+
+                }
             }
         </script>
         <script>
