--- a/index.html
+++ b/index.html
@@ -44,24 +44,26 @@
 
                 <p>Бригадна структура більше відповідаю веденню новітніх війн, військові експерти називають їх війнами 4 покоління - високоінтенсивні, із великими марш кидками, використанням сучасної техніки, озброєння, новітніх технологій, а головне - вузько
                     направлених спеціалістів та взаємодії різних родів військ.</p>
-
-                <p>Окремі елементи структури.</p>
-
-                <p>Військовий округ - стратегічне командування військ, які знаходяться на певній території. В росії чотири військові округи: Західний, Центральний, Південний, Східний, замість північного спеціальне угрупування - Північний флот.</p>
+            </div>
+            <div class="semi-header">
+                Окремі елементи структури
+            </div>
+            <div class='usual_text_block'>
+                <p><b>Військовий округ</b> - стратегічне командування військ, які знаходяться на певній території. В росії чотири військові округи: Західний, Центральний, Південний, Східний, замість північного спеціальне угрупування - Північний флот.</p>
 
                 <p>Також в межах військових округів є окремі флоти: Чорноморський, Каспійський, Балтійський та Тихоокеанський - вони підпорядковуються коружному командуванню.</p>
 
-                <p>Армія - стратегічне об’єднання військ в межах певного Воєнного округу. Армія може складатися із дивізій і полків, або напряму бригад. Також армія може включати окремі полки та роти та навіть батальйони. Армія зазвичай складається із кількох
-                    бригад - танкових або мотострілецьких, які є її основною силою, також до цього додаються артилерійські бригади, зенітно- ракетні бригади - ПВО, бригади радіохімічного захисту все залежить від конкретної армії, Меншими підрозділами
+                <p><b>Армія</b> - стратегічне об’єднання військ в межах певного Воєнного округу. Армія може складатися із дивізій і полків, або напряму бригад. Також армія може включати окремі полки та роти та навіть батальйони. Армія зазвичай складається
+                    із кількох бригад - танкових або мотострілецьких, які є її основною силою, також до цього додаються артилерійські бригади, зенітно- ракетні бригади - ПВО, бригади радіохімічного захисту все залежить від конкретної армії, Меншими підрозділами
                     в армії можуть бути інженерні та саперні полки, роти снайперів в такому випадку до їх назви додається “окремий”.</p>
 
-                <p>Дивізія - зазвичай складається із кількох “ударних” полків - мотострілецьких або танкових до цього додається артилерійський, саперний, інженерний полки та також менші підрозділи.</p>
+                <p><b>Дивізія</b> - зазвичай складається із кількох “ударних” полків - мотострілецьких або танкових до цього додається артилерійський, саперний, інженерний полки та також менші підрозділи.</p>
 
-                <p>Бригада - складається із лінійних та окремих батальйонів. Лінійних батальйонів зазвичай 3 це мотострілецькі і танкові. Якщо Мотострілецьких 2 - бригада вважається мотопіхотною, якщо 2 танкових - то танковою бригадою. Лінійні батальйони
+                <p><b>Бригада</b> - складається із лінійних та окремих батальйонів. Лінійних батальйонів зазвичай 3 це мотострілецькі і танкові. Якщо Мотострілецьких 2 - бригада вважається мотопіхотною, якщо 2 танкових - то танковою бригадою. Лінійні батальйони
                     носять номери починаючи від “Першого” у кожній бригаді. Також у бригаді є артилерійський дивізіон, рота снайперів тощо. Та окремі батальйони - знову ж саперний, інженерний, зв’язку, можуть бути і окремі роти або взводи. Окремі підрозділи
                     мають номери наскрізні для всіх військових сил.</p>
 
-                <p>Полк - має схожу із бригадою структуру, але менший по кількості. Так, якщо у бригаді близько 4 - 5 тисяч чоловік, то у полку 1 - 2 тисячі.</p>
+                <p><b>Полк</b> - має схожу із бригадою структуру, але менший по кількості. Так, якщо у бригаді близько 4 - 5 тисяч чоловік, то у полку 1 - 2 тисячі.</p>
 
                 <p>Бригада та полк є окремими тактичними одиницями і мають свої окремі військові частини, тож можна точно встановити місце їх постійної дислокації.</p>
 
@@ -72,7 +74,11 @@
 
                 <p>Кадрові підрозділи потенційно можуть бути “швидко” розгорнуті, оскільки мають структуру і потребують виключно особового складу та техніки.</p>
 
-                <p>Не всі солдати в армії воюють.</p>
+            </div>
+            <div class="semi-header">
+                Не всі солдати в армії воюють
+            </div>
+            <div class='usual_text_block'>
 
                 <p>Не всі підрозділи в складі бригад та полків беруть участь у бойових діях. За стандартами НАТО, до прикладу на кожного солдата із гвинтівкою в руках припадає майже 10 із каструлями, папірцями, клавіатурами та ящиками. Є підрозділи ППО,
                     які не часто знаходяться на нулі, є зв’язківці, інженери, інструктори, підрозділи матеріально - технічного забезпечення тощо. Із бригади у зіткненні на “нулі” беруть участь лише кілька лінійних батальйонів та окремі роти, наприклад
@@ -91,8 +97,11 @@
 
                 <p>А Каспійська флотилія взагалі не може становити суттєвої загрози для України, оскільки є абсолютно ізольовано (але не виключено потенційних ракетних ударів). До того ж Чорне море вважається безядерною зоною, тому перебування тут кораблів
                     чи підводних човнів із ядерними двигунами - заборонено.</p>
-
-                <p>Які сили росія задіяла в Україні?</p>
+            </div>
+            <div class="semi-header">
+                Які сили росія задіяла в Україні?
+            </div>
+            <div class='usual_text_block'>
 
                 <p>В Україні росія задіяла підрозділи із усіх своїх військових округів.</p>
 
@@ -160,7 +169,7 @@
                     // Підсвічуємо точки, лінії та текст підрозділів, які беруть участь у повномасштабному вторгенні
 
 
-                d3.csv("/data/map.csv", function(data) {
+                d3.csv("data/map.csv", function(data) {
                     //console.log(data)
                     var unit_list = []
                     data.forEach(function(d) {
