--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <script>
             function colored_links() {
                 console.log("colored_links")
-                d3.csv("/data/map.csv", function(data) {
+                d3.csv("data/map.csv", function(data) {
                     //console.log(data)
                     var link = []
                     data.forEach(function(d) {
