--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
                 <p>Не варто недооцінювати здатність росії впроваджувати тактику випаленої землі. Також росія навіть у загальновійськових боях задіює підрозділи росгвардії - легкоозброєні внутрішні війська та так звану “народну міліцію Л\ДНР” - ці підрозділи
                     не увійшли до нашої графіки. </p>
             </div>
+
+            <div class="semi-header">
+                Наскільки велика російська армія?
+            </div>
+            <div class='usual_text_block'>
+                <span style="color: red">Кольором </span> позначено бойові підрозділи, задіяні у війні РФ з Україною.
+            </div>
             <div id='selectors'>
                 <select id="district_selector">
             <option value="Західний військовий округ">Західний військовий округ</option>
